--- a/app/views/common/_flashes.html.erb
+++ b/app/views/common/_flashes.html.erb
@@ -1,5 +1,5 @@
-<% if flashes.any? %>
-  <% user_facing_flashes.each do |key,vvalue| %>
+<% if flash.any? %>
+  <% user_facing_flashes.each do |key, value| %>
      <div class="aler aler-dismissable alert-<%= flash_class(key) %>" >
        <button class="close" data-dismiss="aler">x</button>
        <%= value %>
