--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -10,7 +10,7 @@
   <h2><%= @group.title %></h2>
   <p><%= @group.description %></p>
 
-  <table>
+  <table class="table">
     <thead>
       <tr>
         <th>文章内容</th>
@@ -32,5 +32,4 @@
   <div class="text-center">
     <%= will_paginate @posts %>
   </div>
-  
 </div>
