--- a/app/views/account/groups/index.html.erb
+++ b/app/views/account/groups/index.html.erb
@@ -9,7 +9,7 @@
          <th> Title </th>
          <th> Description </th>
          <th> Post Count </th>
-         <th> Last Uptate </th>
+         <th> Last Update </th>
        <tr>
      </thead>
 
